Updated styling. Adding picture for my work. Adding content to about me section. Fixed alignments

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,23 +1,22 @@
 
 body{
 	font-family: 'Roboto', sans-serif;
-}
-
-div#heading, div#content, div.banner, div#footer{
-	margin-left: -1em;
-	margin-top: -1em;
-}
-
-div#content{
-	padding-right: 1em;
-}
-div.banner{
 	margin-right: 0;
 }
 
-div#about, div#contact, div#portfolio{
+div#heading, div.banner /* div#content, div.banner, div#footer, div#blogarea*/{
+	margin-top: -1em;
+	margin-left: -1em;
+}
+
+div#about, div#contact {
 	position: relative;
-	top: -150px;
+	top: -10vw;
+}
+
+div#portfolio{
+	position: relative;
+	top: -15vw;
 }
 
 div#heading{
@@ -70,12 +69,19 @@ a{
 	text-decoration: none;
 }
 
+a.textfield{
+	color: blue;
+	font-size: 100%;
+	text-align: left;
+	text-decoration: underline;
+}
+
 a:hover { 
 	color: #607D8B;
 }
 
 div#content{
-	background-color: #B6B6B6;/*#03A9F4;*/
+	/*background-color: #B6B6B6;/*#03A9F4;*/
 	float: left;
 	width: 100%;
 	height: 100%;
@@ -92,7 +98,7 @@ ul#menu{
 	height: 100%;
 	margin: 0;
 	margin-bottom: 1em;
-	padding-left: 0; 
+	padding-left: 5em; 
 }
 
 li {
@@ -104,27 +110,26 @@ li {
 
 
 div#blog-area{
-	background-color: #B6B6B6;/*#03A9F4;*/
-	width: 90%;
+	/*background-color: #B6B6B6;*/
 	height: 100%;	
-	margin: 0 auto;
+	width:100%;
 }
 
 div.blog-entry{ 
 	background-color: #FFFFFF;
-	padding: 1em;
-	margin: 0 auto;
-	width: 95%;
-	border-bottom-style: solid;
-	border-color: #B6B6B6;
-	border-width: 0.1em;
+	width: 100%;
+	margin-left: -1em;
+	padding-bottom: 5em;
+	padding-right: 8px;
+/*	border-bottom-style: solid;
+	border-color: #B6B6B6;*/
 }
 
 .blog-entry h3{
 	font-size: 200%;
 }
 
-#intro{
+h3.section-title{
 	text-align: center;
 	width: 100%;
 	font-size: 250%;
@@ -132,7 +137,6 @@ div.blog-entry{
 
 .blog-entry h3, .blog-entry h5{
 	color: black;
-	text-align: left;
 	float: left;
 	margin: 0;
 }
@@ -144,10 +148,12 @@ div.blog-entry{
 
 .banner{
 	width: 100%;
-	padding-right: 2em;
+	padding-right: 8px;
+	padding-top: 15vw;
+	padding-bottom: 15vw;
 	height: 100%;
 	background-image: url("http://archetypon.net/preview/photographos/vii/panorama/files/page3-1003-full.jpg");
-	background-size: 100% 110%;
+	background-size: 100% 100%;
 }
 
 .blog-entry p{
@@ -158,15 +164,14 @@ div.blog-entry{
 
 div#footer{
 	clear: both;
-	height: 15em;
 	background-color: #B6B6B6;
 	margin-bottom: -1em;
 }
 
 #profilepic{
 	margin-top: 2em;
-	width: 30%;
-	height: 30%;
+	width: 20%;
+	height: 20%;
 }
 
 #profpic{
@@ -177,7 +182,20 @@ div#footer{
 
 p{
 	color: #000000;
-	/*font-weight: bold;*/
 	font-family: arial;
+	text-align: center;
+	margin: 0 auto;
 	padding-left: 2rem;
+	width: 70%;
+}
+
+div#mywork{
+	padding-top: 10em;
+	background-image: url("../assets/work.png");
+	background-size: 100% 120%;
+	padding-bottom: 40em;
+}
+
+div#mywork h3{
+	color: #FFFFFF;
 }
